--- a/Home.css
+++ b/Home.css
@@ -16,12 +16,30 @@ body{
     width: 100%;
     height: 100px;
     z-index: 100;
+    justify-content: space-between;
 }
 .nav-services{
     display: flex;
     position: absolute;
     right: 250px ;
     margin-top: 40px;
+}
+.icons{
+    display: flex;
+    position: absolute;
+    right: 30px;
+    margin-top: 43px;
+}
+.icons li{
+    list-style: none;
+    position: relative;
+    font-size: 1.4rem;
+    padding: 0 10px;
+}
+.fa-brands:hover{
+    border-radius: 5px;
+    background: transparent;
+    box-shadow: 0 0 10px 5px #ffffff6a;
 }
 .nav-services li{
     list-style: none ;
@@ -66,7 +84,7 @@ a span#logo{
     height: 50px;
     width: 150px;
     position: absolute;
-    background: #5541ac;
+    /* background:#4f37b; */
     border-left: 5px solid #fff;
     margin: 0px 10px ;
     animation: run 1s ease infinite;
@@ -85,23 +103,26 @@ a span#logo{
 
 /* center content part */
 .center-part{
+    background: url(./images/high-angle-shot-beautiful-cityscape-sunset-new-york-city-usa.jpg);
+    /* filter: blur(1px); */
+    background-position: center;
+    background-size: cover;
     position: relative;
-    height: 100vh;  
-    width: 100%;
-    background: #7f6fc2;
+    /* height: 100vh;  
+    width: 100%; */
     position: relative;
     display: flex;
     align-items: center;
 
 }
 .left-container{
-    background:#5541ac ;
+    /* background:#5541ac ; */
     height: 100vh;
     width: 800px;
     
 }
 .right-container{
-    background:#4f37bb ;
+    /* background:#4f37bb ; */
     height: 100vh;
     width: 800px;
 }
