--- a/Home.css
+++ b/Home.css
@@ -126,6 +126,14 @@ a span#logo{
     height: 100vh;
     width: 800px;
 }
+hr{
+    height: 6px;
+    border: none;
+    outline: none;
+    background: linear-gradient(to right,#ffa600, #eaff00,#09ff00,#009dff,#c800ff,#fe4ac8,#ff0000);
+    /* background: radial-gradient(#eaff00,#80ff00,#009dff,#c800ff); */
+    /* background: grad; */
+}
 .bottum-center-part{
     position: relative;
     height: 100vh;  
@@ -146,4 +154,9 @@ a span#logo{
     background:#4f37bb ;
     height: 100vh;
     width: 800px;
+}
+.firts-Section{
+    width: 100%;
+    height: 100vh;
+    background: #c800ff;
 }
