--- a/Home.css
+++ b/Home.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
-body{
+/* body{
     margin: 0;
     padding: 0;
-}
+} */
 .container{
     width: 100%;
 }
@@ -105,28 +105,119 @@ a span#logo{
 } */
 
 /* center content part */
-.first-container{
+
+ 
+ .first-container{
     /* background: url(./images/high-angle-shot-beautiful-cityscape-sunset-new-york-city-usa.jpg); */
     /* filter: blur(1px); */
     /* background-position: center; */
     /* background-size: cover; */
-    background: linear-gradient( #000000, #020d20, #02172d );
-    position: relative;
-    position: relative;
+    /* background: linear-gradient( #000000, #020d20, #02172d ); */
     display: flex;
-    align-items: center;
-
-}
-.f-left-container{
-
+    overflow-x: hidden;
+    /* display: flex; */
+    flex-direction: column;
+    background: #919191;
+} 
+/* .f-left-container{
+    background: #02172d;
     height: 100vh;
-    width: 800px;
+    width: 1200px;
     
 }
 .f-right-container{
     height: 100vh;
     width: 800px;
-}
+} */
+body {
+    margin: 0;
+    padding: 0;
+    /* overflow-x: hidden;
+    display: flex;
+    flex-direction: column; */
+  }
+  .first {
+    width: 100%;
+    height: 135px;
+    display: flex;
+  }
+  .first .hex1{
+    margin: -80px -36px;
+    padding: 20px 22px;
+  }
+  .first .hex1{
+    margin: -80px -36px;
+    padding: 20px 22px;
+  }
+  .second {
+    width: 100%;
+    height: 135px;
+    margin: -55px 51px;
+    display: flex;
+  }
+  .second .hex2 {
+    margin: -68px -36px;
+    padding: 20px 22px;
+  }
+  .third {
+    width: 100%;
+    height: 135px;
+    margin: 24px 0px;
+    display: flex;
+  }
+  span{
+    color:#b3b1b1;
+  }
+  span:hover{
+    cursor: pointer;
+    color: #fe6100;
+    
+  }
+  .third .hex3 {
+    margin: -80px -36px;
+    padding: 20px 22px;
+  }
+  .forth {
+    width: 100%;
+    height: 135px;
+    margin: -79px 51px;
+    display: flex;
+  }
+  .forth .hex4 {
+    margin: -68px -36px;
+    padding: 20px 22px;
+  }
+  .five {
+    width: 100%;
+    height: 135px;
+    margin: 48px 0px;
+    display: flex;
+  }
+  .five .hex5 {
+    margin: -80px -36px;
+    padding: 20px 22px;
+
+  }
+  .six {
+    width: 100%;
+    height: 135px;
+    margin: -86px 51px;
+    display: flex;
+  }
+  .six .hex6 {
+    margin: -85px -36px;
+    padding: 20px 22px;
+  }
+  .seven {
+    width: 100%;
+    height: 135px;
+    margin: 38px 0px;
+    display: flex;
+  }
+  .seven .hex7 {
+    margin: -80px -36px;
+    padding: 20px 22px;
+  }
 hr{
     height: 6px;
     border: none;
@@ -171,6 +262,7 @@ hr{
     z-index: 100;
     color: #fff;
     
+
 }
 .s-right-container h2 b{
     z-index: 100;
