--- a/Home.css
+++ b/Home.css
@@ -17,8 +17,56 @@ body {
   width: 100%;
   height: 100px;
   justify-content: space-between;
-  z-index: 30;
+  z-index: 50;
 }
+.header.fixed { 
+  width:100%; 
+  height:100px;
+  z-index: 40; 
+  position:fixed;
+  top:0px;
+  background:#02172d;
+  color: #fff;
+  -moz-box-shadow: 0 2px 3px 1px rgba(63, 63, 63, .4);
+  -webkit-box-shadow: 0 2px 3px 1px rgba(63, 63, 63, .4);
+  box-shadow: 0 2px 3px 1px rgba(63, 63, 63, .4);
+  -moz-transform: translateY(-130px);
+  -ms-transform: translateY(-130px);
+  -webkit-transform: translateY(-130px);
+   transform: translateY(-130px);
+   transition: transform .5s ease;
+}
+
+.header.fixed.active {
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+}
+/* .navigation.scroll { 
+  width:100%; 
+  height:100px; 
+  z-index: 1000;
+  position:fixed;
+  justify-content: space-between;
+  background:#02172d;
+  color: #fff;
+  top:0px;
+  -moz-box-shadow: 0 2px 3px 1px rgba(63, 63, 63, .4);
+  -webkit-box-shadow: 0 2px 3px 1px rgba(63, 63, 63, .4);
+  box-shadow: 0 2px 3px 1px rgba(63, 63, 63, .4);
+  -moz-transform: translateY(-130px);
+  -ms-transform: translateY(-130px);
+  -webkit-transform: translateY(-130px);
+   transform: translateY(-130px);
+   transition: transform .5s ease;
+  } 
+  .navigation.scroll.active {
+      -moz-transform: translateY(0);
+      -ms-transform: translateY(0);
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+  } */
 /* .navigation .scroll {
   background: white;
   color: royalblue;
@@ -113,7 +161,6 @@ a span#logo {
 
 .first-container {
   display: flex;
-  /* background: url(./images/high-angle-shot-beautiful-cityscape-sunset-new-york-city-usa.jpg); */
   overflow-x: hidden;
   align-items: center;
   justify-content: center;
@@ -141,12 +188,13 @@ a span#logo {
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .animated-text {
-  z-index: 2000;
+  z-index: 30;
   font-size: 2em;
   color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    text-shadow: 2px 0 10px #bfedef;
 }
 hr {
   height: 6px;
@@ -241,37 +289,120 @@ hr {
   justify-content: center;
 }
 .overview {
+  z-index: 30;
   background: #ffffff65;
   color: white;
   backdrop-filter: blur(10px);
   /* opacity: 60%; */
-  height: 500px;
-  width: 50%;
+  height: 550px;
+  width: 90%;
   border-radius: 20px;
   box-shadow: 0 0 30px 12px #b9baba75;
   display: flex;
   position: absolute;
-  flex-direction: column;
-  align-items: center;
-  z-index: 1000;
+  /* z-index: 1000; */
   overflow: hidden;
+  /* transition-delay: 20s; */
+}
+.img-details{
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+  position: relative;
+  top: 10px;
+  left: 10px;
+  height: 200px;
+  border-radius: 10px;
+  width: 500px;
+  background:#fff ;
+  
 }
 #dpk-img {
   height: 150px;
   width: 150px;
   border-radius: 100px;
+  border: 4px solid rgb(179, 178, 178);
   position: relative;
-  top: 10px;
+  top: 30px;
+  left: 30px;
   text-align: center;
 }
-.text-content {
+.prsonal-info li{
+display: flex;
+position: relative;
+top: 30px;
+left: -10px;
+flex-direction: row;
+font-weight: 500;
+color: black;
+font-size: 1em;
+list-style: none;
+word-spacing:1px;
+padding: 10px;
+line-height:0.5;
+word-spacing: 10px;
+font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+.language-info{
+  display: flex;
+  /* grid-template-columns: auto auto auto; */
+  position: absolute;
+  height: 300px;
+  width: 500px;
+  background: #fff;
+  top: 220px;
+  border-radius: 10px;
+  left: 10px;
+  flex-direction: row;
+  color: black; 
+  /* padding: 10px; */
+}
+.icon-c{
+  top: 60px;
+  height: 200px;
+  width: 100%;
+  position: absolute;
+  /* background: #599192; */
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+}
+.skills{
+  width: 100%;
+  text-align: center;
+  line-height: 3;
+  font-weight: 500;
+  background-color: #dee4e4dc;
+  /* border-radius:10px ; */
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  height: 50px;
+  font-size: 1.1em;
+}
+.L-icon{
+  display: block;
+  position: relative;
+  border-radius: 10px;
+  width: 140px;
+  height: 50px;
+  font-size: 1em;
+  font-weight: 500;
+  text-align: center;
+  line-height: 3;
+  background: #c8c9c9;
+  /* margin: 0.5em; */
+  /* padding: 10px 10px ; */
+}
+/* .text-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
   top: 40px;
-}
+} */
 .third-container .circle1 {
   height: 200px;
   width: 200px;
@@ -281,7 +412,6 @@ hr {
   position: relative;
   top: -460px;
   left: 96px;
-  z-index: 90;
   animation: circles-sky 25s ease-in infinite;
 }
 @keyframes circles-sky {
@@ -294,7 +424,7 @@ hr {
   height: 100px;
   width: 100px;
   border-radius: 100%;
-  /* box-shadow: 0 0 50px 0px #fff; */
+  box-shadow: 0 0 50px 0px #fff;
   background: radial-gradient(#fbc640, #fba728, #ff8000);
   top: 150px;
   left: -170px;
@@ -310,7 +440,7 @@ hr {
   height: 150px;
   width: 150px;
   border-radius: 100%;
-  /* box-shadow: 0 0 50px 0px #fff; */
+  box-shadow: 0 0 50px 0px #fff;
   background: radial-gradient(#ff98e9, #f85dd6, #e004b1);
   top: -250px;
   left: 500px;
@@ -325,7 +455,7 @@ hr {
   height: 300px;
   width: 300px;
   border-radius: 100%;
-  /* box-shadow: 0 0 50px 0px #fff; */
+  box-shadow: 0 0 50px 0px #fff;
   background: radial-gradient(#d8fab8, #a5ff51, #37e303);
   position: relative;
   top: 193px;
@@ -341,7 +471,7 @@ hr {
   height: 70px;
   width: 70px;
   border-radius: 100%;
-  /* box-shadow: 0 0 50px 0px #fff; */
+  box-shadow: 0 0 50px 0px #fff;
   background: radial-gradient(#ffc3c3, #ff5353, #d00000);
   position: relative;
   top: -100px;
@@ -360,7 +490,7 @@ hr {
   height: 90px;
   width: 90px;
   border-radius: 100%;
-  /* box-shadow: 0 0 50px 0px #fff; */
+  box-shadow: 0 0 50px 0px #fff;
   background: radial-gradient(#fdffe8, #f5ff6d, #d8e701);
   position: relative;
   top: -400px;
@@ -371,4 +501,9 @@ hr {
   50% {
     transform: translateY(100vh);
   }
+}
+
+.forth-container{
+  width: 100%;
+  height: 100vw;
 }
